--- a/Gestor-Actividades/CSS/StyleSheet1.css
+++ b/Gestor-Actividades/CSS/StyleSheet1.css
@@ -37,7 +37,8 @@ h1 {
     overflow: hidden; 
     float:left;
 }
-button {
+
+.botones {
     width: 300px;
     height: 40px;
     background-color: #0f3470;
@@ -54,9 +55,10 @@ button {
     padding: 0 20px 0 0;
 }
 
-#lugar{
+#seccion{
     float:left;
     width:70%;
+    height:1000px;
 }
 
 input {
@@ -64,5 +66,4 @@ input {
     margin-left: auto;
     margin-right: auto;
 }
-
 
