--- a/Gestor-Actividades/CSS/StyleSheet1.css
+++ b/Gestor-Actividades/CSS/StyleSheet1.css
@@ -51,8 +51,8 @@ h1 {
 #form2 {
     background-color: #ffffff;
     margin: 0 auto;
-    width: 500px;
-    height: 600px;
+    width: 495px;
+    height: 634px;
     padding: 0 20px 0 0;
 }
 
@@ -66,5 +66,6 @@ input {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0px;
 }
 
