--- a/Gestor-Actividades/CSS/StyleSheet1.css
+++ b/Gestor-Actividades/CSS/StyleSheet1.css
@@ -41,6 +41,8 @@ h1 {
 }
 
 .botones {
+    width: 300px;
+    height: 40px;
     background-color: #0f3470;
     color: aliceblue;
     display: block;
