--- a/Gestor-Actividades/CSS/StyleSheet1.css
+++ b/Gestor-Actividades/CSS/StyleSheet1.css
@@ -1,7 +1,6 @@
 ﻿#imagen {
     float: right;
     margin-right: 200px;
-    
     border-radius: 5px;
 }
 
@@ -54,20 +53,19 @@ h1 {
     background-color: #ffffff;
     margin: 0 auto;
     width: 495px;
-    height: 702px;
     padding: 0 20px 0 0;
 }
 
 #seccion{
     float:left;
     width:70%;
-    height:1028px;
 }
 
-input {
+
+
+#form2 input {
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0px;
 }
-
