Mostrar actividades de un participante
- Correr lo ultimo del script de procedimientos: correccion en el nombre de una columna de la tabla Participantes y proc de actXparticipante
-Cambios en interfaz

--- a/Gestor-Actividades/CSS/StyleSheet2.css
+++ b/Gestor-Actividades/CSS/StyleSheet2.css
@@ -21,6 +21,25 @@ nav li{
     text-align: center;
 }
 
+#menuInicio ul {
+    margin: 0;    
+}
+
+#menuInicio li{
+    list-style:none;
+    float:left;
+    padding-right: 240px;
+    padding-left: 150px;
+    padding-top: 10px;
+}
+
+#menuInicio a{
+    text-decoration:none;
+    color:#444;
+}
+
+
+
 
 #imagen {
     float: right;
