Desinscripción y envío de correos

--- a/Gestor-Actividades/CSS/StyleSheet1.css
+++ b/Gestor-Actividades/CSS/StyleSheet1.css
@@ -57,8 +57,8 @@ nav h1{
     background-color: #0f3470;
     color: aliceblue;
     display: block;
-    margin-left:auto;
-    margin-right:auto;
+ //   margin-left:auto;
+  //  margin-right:auto;
     width: 300px;
     height: 50px;
     }
